// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CertificateAuthority /> when remote access is disabled should render component 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      You can't delete certificate authority while remote access is enabled. To delete it, you need to disable the access first.
    </p>
  </div>
</div>
`;

exports[`<CertificateAuthority /> when remote access is enabled should render component 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      Your certificate authority is set up properly. Please note that if you delete it, all clients will have their access revoked.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="button"
      >
        <span>
          Delete Certificate Authority
        </span>
      </button>
    </div>
  </div>
</div>
`;
